--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,9 +29,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:tabBackground="@color/colorPrimary"
-            app:tabMode="fixed"
             app:tabGravity="fill"
-            app:tabTextColor="@color/colorPrimaryDark"/>
+            app:tabMode="fixed"
+            app:tabTextAppearance="@style/TextAppearance.AppCompat.Large"
+            app:tabTextColor="#FFFFFF" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
