--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#047DCA</color>
     <color name="colorPrimaryDark">#3F51B5</color>
-    <color name="colorAccent">#B8173A</color>
+    <color name="colorAccent">#CA153E</color>
 
     <!-- Recycler Views -->
     <color name="rvItemBorder">#fff</color>
